--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bg.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bg.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Manjunath &amp; Revathi</h1>
+							<h1>ಸಿದ್ಧಿಧಾತ್ರಿ ನಿವಾಸ</h1>
 							<br>
-							<img src="images/fprint.png" alt="Shyam + Rincy"> 
+							<!-- <img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Home_icon_black.png" alt="Shyam + Rincy">  -->
 							<h2>05.01.2024</h2>
 							<h2>"I have found the one whom my soul loves." </h2>
 							<div class="flipTimebox">
@@ -133,7 +133,7 @@
 					<div class="fh5co-video fh5co-bgv" style="background-image: url(images/img_bg_3.jpg); ">
 						<div class="video-container rounded-corner">
 							<!-- Replace 'VIDEO_URL' with the URL of your video -->
-							<iframe id="videoFrame" width="100%" height="400" src="images/TESAR (1).mp4" frameborder="0" allowfullscreen></iframe>
+							<!-- <iframe id="videoFrame" width="100%" height="400" src="images/TESAR (1).mp4" frameborder="0" allowfullscreen></iframe> -->
 						</div>
 						<!-- <div class="overlay"></div> -->
 					</div>
