--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bg.jpeg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<div class="overlay"></div>
