--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ We look forward to welcoming you to our new home and creating lasting memories t
 		</div>
 
 
-		<div id="fh5co-gallery" class="fh5co-section-gray">
+		<!-- <div id="fh5co-gallery" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -323,7 +323,7 @@ We look forward to welcoming you to our new home and creating lasting memories t
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="formcontainer">
 			<div id="contact">
