--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ We look forward to welcoming you to our new home and creating lasting memories t
 					<div class="display-t">
 						<div class="display-tc">
 							<div class="col-md-10 col-md-offset-1">
-								<div class="col-md-6 col-sm-6 text-center">
+								<div class="col-md-6 col-sm-6 box text-center">
 									<div class="event-wrap animate-box">
 										<h3>ವಾಸ್ತು ಶಾಂತಿ & ಗೃಹ ಪ್ರವೇಶ</h3>
 										<div class="event-col">
