--- a/index.html
+++ b/index.html
@@ -136,22 +136,23 @@
 			<section class="container  text-center" id="regular-section">
 
 				<span class="bodytext" data-aos="fade-up">
-					We are delighted to invite you to the opening ceremony of our new home on February 18, 2024. <br/>
-					After months of anticipation and hard work, we are thrilled to share this special moment with our loved
-					ones.<br/><br/>
+					We are delighted to invite you to the opening ceremony of our new home on February 18, 2024. <br />
+					After months of anticipation and hard work, we are thrilled to share this special moment with our
+					loved
+					ones.<br /><br />
 				</span>
 				<span id="fh5co-services" class="bodytext" data-aos="fade-up">
-					Join us as we celebrate this milestone and embark on a new chapter in our lives.<br/> 
-					There will be food, drinks, and joyful moments shared with cherished company.<br/><br/>
+					Join us as we celebrate this milestone and embark on a new chapter in our lives.<br />
+					There will be food, drinks, and joyful moments shared with cherished company.<br /><br />
 				</span>
 				<span class="bodytext" data-aos="fade-up">
-					Your presence will make our celebration complete.<br/>
-					Please RSVP by 17-02-2024 to ensure we can accommodate all our guests comfortably.<br/><br/>
+					Your presence will make our celebration complete.<br />
+					Please RSVP by 17-02-2024 to ensure we can accommodate all our guests comfortably.<br /><br />
 
 				</span>
 				<span id="fh5co-services" class="bodytext" data-aos="fade-up">
-					
-We look forward to welcoming you to our new home and creating lasting memories together.
+
+					We look forward to welcoming you to our new home and creating lasting memories together.
 				</span>
 		</div>
 
@@ -182,13 +183,12 @@ We look forward to welcoming you to our new home and creating lasting memories t
 											<i class="icon-clock"></i>
 											<span>05:00 am to 06:00 am </span>
 
-											<p>At <br /><b> Siddidhatri nivasa  <br />Near Ayyappa Swamy Temple ,
-													<br />  Shabri Nagara , Hunasikatte road , Ranebennur
-													<iframe
-														src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d269.5751719863783!2d75.83180830476945!3d14.925717017346681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb999d1b5321fbf%3A0x15a6c6c3fa4d1bd!2sShree%20Mylarlingeshwar%20Kirani%20Stores!5e0!3m2!1sen!2sin!4v1703904943575!5m2!1sen!2sin"
-														width="250" height="200" style="border:0;" allowfullscreen=""
-														loading="lazy"
-														referrerpolicy="no-referrer-when-downgrade"></iframe>
+											<p>At <br /><b> Siddidhatri nivasa <br />Near Ayyappa Swamy Temple ,
+													<br /> Shabri Nagara , Hunasikatte road , Ranebennur
+													<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3860.812762738322!2d75.65949347510637!3d14.609739585877687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTTCsDM2JzM1LjEiTiA3NcKwMzknNDMuNSJF!5e0!3m2!1sen!2sin!4v1707470202673!5m2!1sen!2sin"
+													width="250" height="200" style="border:0;" allowfullscreen=""
+														loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+													</iframe>
 										</div>
 									</div>
 								</div>
@@ -202,15 +202,14 @@ We look forward to welcoming you to our new home and creating lasting memories t
 										<div class="event-col">
 
 											<i class="icon-clock"></i>
-											<span>01:00 pm  </span>
+											<span>01:00 pm </span>
 
-											<p>At <br /><b> Siddidhatri nivasa  <br />Near Ayyappa Swamy Temple ,
-													<br />  Shabri Nagara , Hunasikatte road , Ranebennur
-													<iframe
-														src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d269.5751719863783!2d75.83180830476945!3d14.925717017346681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb999d1b5321fbf%3A0x15a6c6c3fa4d1bd!2sShree%20Mylarlingeshwar%20Kirani%20Stores!5e0!3m2!1sen!2sin!4v1703904943575!5m2!1sen!2sin"
-														width="250" height="200" style="border:0;" allowfullscreen=""
-														loading="lazy"
-														referrerpolicy="no-referrer-when-downgrade"></iframe>
+											<p>At <br /><b> Siddidhatri nivasa <br />Near Ayyappa Swamy Temple ,
+													<br /> Shabri Nagara , Hunasikatte road , Ranebennur
+													<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3860.812762738322!2d75.65949347510637!3d14.609739585877687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTTCsDM2JzM1LjEiTiA3NcKwMzknNDMuNSJF!5e0!3m2!1sen!2sin!4v1707470202673!5m2!1sen!2sin"
+													width="250" height="200" style="border:0;" allowfullscreen=""
+														loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+													</iframe>
 										</div>
 									</div>
 								</div>
@@ -221,34 +220,17 @@ We look forward to welcoming you to our new home and creating lasting memories t
 			</div>
 		</div>
 		<div id="fh5co-services" class="fh5co-section-gray">
-			
-			<!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -50 1440 320">
-			   <path fill="burlywood" fill-opacity="1" d="M0,96L30,106.7C60,117,120,139,180,154.7C240,171,300,181,360,186.7C420,192,480,192,540,181.3C600,171,660,149,720,154.7C780,160,840,192,900,208C960,224,1020,224,1080,208C1140,192,1200,160,1260,138.7C1320,117,1380,107,1410,101.3L1440,96L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path>
-		   </svg> -->
-			<section class="container  text-center" id="regular-section">
-				<!-- <h3> With Best Complements From</h3>
-				<span class="bodytext" data-aos="fade-up">
-					Smt.Abhilasha  Shri.Vijaya Kumar Hanagodi Math  <br/>
-				<span class="bodytext" data-aos="fade-up">
-					Smt.Geetanjali  Shri.Vinay Kumar Hanagodi Math  <br/>
-				<span class="bodytext" data-aos="fade-up">
-					Smt.Neelamma  Shri.Shanmukayya Hanagodi Math  <br/>
-				<span class="bodytext" data-aos="fade-up">
-					Chi||Cheritaradhya Hanagodi Math  <br/>
-				<span class="bodytext" data-aos="fade-up">
-					Smt.Shantakumari  Shri.Vageesha Kumar Ronada Math 
-				</span> -->
-				<div style="width: 100%; overflow: hidden;">
-					<img src="images/wishes.jpg" style="width: 100%; display: block; margin: auto;" class="bg has-text-centered" alt="lord gaesha">
-				</div>
-				
 
-				<!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 150 1440 320">
-					<path fill="burlywood" fill-opacity="1" d="M0,224L34.3,234.7C68.6,245,137,267,206,266.7C274.3,267,343,245,411,234.7C480,224,549,224,617,213.3C685.7,203,754,181,823,197.3C891.4,213,960,267,1029,266.7C1097.1,267,1166,213,1234,192C1302.9,171,1371,181,1406,186.7L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path>
-				</svg>
-		</div>
-		 -->
-		<!-- <div id="fh5co-gallery" class="fh5co-section-gray">
+			<section class="container  text-center" id="regular-section">
+				<div style="width: 100%; overflow: hidden;">
+					<img src="images/wishes.jpg" style="width: 100%; display: block; margin: auto;"
+						class="bg has-text-centered" alt="lord gaesha">
+				</div>
+
+
+			
+		 
+				<!-- <div id="fh5co-gallery" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -351,101 +333,101 @@ We look forward to welcoming you to our new home and creating lasting memories t
 			</div>
 		</div> -->
 
-		<div class="formcontainer">
-			<div id="contact">
-				<h2 class="form-heading">Contact Us for Orders</h2>
-				<form id="orderForm">
-					<div class="form-row">
-						<div class="input-group">
-							<label for="name">Name:</label>
-							<input type="text" id="name" name="name" required>
-						</div>
-						<div class="input-group">
-							<label for="email">Email:</label>
-							<input type="email" id="email" name="email" required>
-						</div>
-						<div class="input-group">
-							<label for="tel">Contact Number:</label>
-							<input type="tel" id="tel" name="tel" required>
-						</div>
-					</div>
-					<div class="form-row">
-						<div class="input-group full-width">
-							<label for="message">Message:</label>
-							<textarea id="messages" name="messages" rows="4" required></textarea>
-						</div>
-					</div>
-					<input type="submit" value="Submit">
-				</form>
-				<p id="confirmation">Thank you for your order! We'll be in touch soon.</p>
-			</div>
-		</div>
-
-		<footer>
-			<div class="footercontainer">
-				<div class="text-center">
-
-
-
-					<hr class="mt-3 mb-2">
-
-					<div class="row align-items-center justify-content-between flex-column flex-sm-row">
-						<div class="col-auto">
-							<small class="text-light">
-								Build with <i class="fa-solid fa-heart mx-1"> </i> Swt Sid
-							</small>
-						</div>
-						<div class="col-auto">
-							<small>
-								<i class="fa-brands fa-instagram me-1"></i><a target="_blank"
-									href="https://www.instagram.com/swt_sid/">Swt_sid . </a>
-
-							</small>
-							<small>
-								<!-- <i class="fa-brands fa-instagram me-1"></i><a target="_blank" href="https://www.instagram.com/swt_sid/">Swt_sid</a> -->
-								<i class="fa-brands fa-whatsapp me-1"></i><a target="_blank"
-									href="https://wa.me/6362041773/?text=Hello%20there%20i%20like%20your%20website!">
-									siddu</a>
-							</small>
-						</div>
+				<div class="formcontainer">
+					<div id="contact">
+						<h2 class="form-heading">Contact Us for Orders</h2>
+						<form id="orderForm">
+							<div class="form-row">
+								<div class="input-group">
+									<label for="name">Name:</label>
+									<input type="text" id="name" name="name" required>
+								</div>
+								<div class="input-group">
+									<label for="email">Email:</label>
+									<input type="email" id="email" name="email" required>
+								</div>
+								<div class="input-group">
+									<label for="tel">Contact Number:</label>
+									<input type="tel" id="tel" name="tel" required>
+								</div>
+							</div>
+							<div class="form-row">
+								<div class="input-group full-width">
+									<label for="message">Message:</label>
+									<textarea id="messages" name="messages" rows="4" required></textarea>
+								</div>
+							</div>
+							<input type="submit" value="Submit">
+						</form>
+						<p id="confirmation">Thank you for your order! We'll be in touch soon.</p>
 					</div>
 				</div>
-			</div>
-		</footer>
-	</div>
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-	</div>
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- clock -->
-	<script src="js/clock.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- countTo -->
-	<script src="js/jquery.countTo.js"></script>
-	<script src='https://momentjs.com/downloads/moment.js'></script>
-	<script
-		src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.14/moment-timezone-with-data-2012-2022.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.js'></script>
-	<!-- Stellar -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
+				<footer>
+					<div class="footercontainer">
+						<div class="text-center">
 
-	<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
-	<script src="js/simplyCountdown.js"></script>
-	<!-- Main -->
-	<script src="js/main.js"></script>
-	<!-- <center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center> -->
+
+
+							<hr class="mt-3 mb-2">
+
+							<div class="row align-items-center justify-content-between flex-column flex-sm-row">
+								<div class="col-auto">
+									<small class="text-light">
+										Build with <i class="fa-solid fa-heart mx-1"> </i> Swt Sid
+									</small>
+								</div>
+								<div class="col-auto">
+									<small>
+										<i class="fa-brands fa-instagram me-1"></i><a target="_blank"
+											href="https://www.instagram.com/swt_sid/">Swt_sid . </a>
+
+									</small>
+									<small>
+										<!-- <i class="fa-brands fa-instagram me-1"></i><a target="_blank" href="https://www.instagram.com/swt_sid/">Swt_sid</a> -->
+										<i class="fa-brands fa-whatsapp me-1"></i><a target="_blank"
+											href="https://wa.me/6362041773/?text=Hello%20there%20i%20like%20your%20website!">
+											siddu</a>
+									</small>
+								</div>
+							</div>
+						</div>
+					</div>
+				</footer>
+		</div>
+		<div class="gototop js-top">
+			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+		</div>
+
+		<!-- jQuery -->
+		<script src="js/jquery.min.js"></script>
+		<!-- clock -->
+		<script src="js/clock.js"></script>
+		<!-- jQuery Easing -->
+		<script src="js/jquery.easing.1.3.js"></script>
+		<!-- Bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Waypoints -->
+		<script src="js/jquery.waypoints.min.js"></script>
+		<!-- Carousel -->
+		<script src="js/owl.carousel.min.js"></script>
+		<!-- countTo -->
+		<script src="js/jquery.countTo.js"></script>
+		<script src='https://momentjs.com/downloads/moment.js'></script>
+		<script
+			src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.14/moment-timezone-with-data-2012-2022.min.js'></script>
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.js'></script>
+		<!-- Stellar -->
+		<script src="js/jquery.stellar.min.js"></script>
+		<!-- Magnific Popup -->
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="js/magnific-popup-options.js"></script>
+
+		<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
+		<script src="js/simplyCountdown.js"></script>
+		<!-- Main -->
+		<script src="js/main.js"></script>
+		<!-- <center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center> -->
 </body>
 
 </html>
