--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 			</div>
 		</div> -->
 
-				<div class="formcontainer">
+				<!-- <div class="formcontainer">
 					<div id="contact">
 						<h2 class="form-heading">Contact Us for Orders</h2>
 						<form id="orderForm">
@@ -361,7 +361,7 @@
 						</form>
 						<p id="confirmation">Thank you for your order! We'll be in touch soon.</p>
 					</div>
-				</div>
+				</div> -->
 
 				<footer>
 					<div class="footercontainer">
