--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Manjunath ❤️ Revathi - 05.01.2024</title>
+	<title>Siddidhatri Nivasa Opening ceremony-18/02/2024</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description"
-		content="We are getting hitched - The dates are 04th & 05th of Janavary '24 and we would like you to be a part of it." />
-	<meta name="keywords" content="Manjunath ❤️ Revathi - 05.01.2024 wedding,website,rsvp" />
-	<meta name="author" content="Manjunath ❤️ Revathi - 05.01.2024" />
+		content=" After months of anticipation and hard work, we are thrilled to share this special moment with our loved ones.." />
+	<meta name="keywords" content="Siddidhatri Nivasa Opening ceremony-18/02/2024 " />
+	<meta name="author" content="Siddidhatri Nivasa Opening ceremony-18/02/2024" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:image" content="images/og.jpg" />
-	<meta property="og:site_name" content="Manjunath ❤️ Revathi - 05.01.2024">
-	<meta property="og:title" content="Manjunath ❤️ Revathi - 05.01.2024">
+	<meta property="og:site_name" content="Siddidhatri Nivasa Opening ceremony-18/02/2024">
+	<meta property="og:title" content="Siddidhatri Nivasa Opening ceremony-18/02/2024">
 	<meta property="og:description"
-		content="We are getting hitched - The dates are 04th & 05th of Janavary '24 and we would like you to be a part of it.">
+		content=" After months of anticipation and hard work, we are thrilled to share this special moment with our loved ones..">
 	<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
 	<meta property="og:image:width" content="300">
 	<meta property="og:image:height" content="300">
 	<!-- Website to visit when clicked in fb or WhatsApp-->
-	<meta property="og:url" content="https://manjunath-netravathi-wedding-invitati.netlify.app/">
+	<meta property="og:url" content="https://homeinogrationinvitation.netlify.app/">
 	<meta property="og:type" content="website" />
 	<meta property="og:image:type" content="image/jpeg">
 
